Update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <title>CSS text</title>
 </head>
 <body>
-    
+    <section>
+        <h1 class="title">Iste odit similique sit</h1>
+        <p class="text">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati commodi,
+            <span>veritatis nihil alias iste</span> odit similique sit eius optio veniam,
+            impedit cumque fuga facere labore quo id necessitatibus quaerat rerum.
+        </p>
+        <a href="#" class="link">Читать дальше...</a>
+    </section>
 </body>
 </html>
