Update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -17,5 +17,13 @@
         </p>
         <a href="#" class="link">Читать дальше...</a>
     </section>
+    <section>
+        <ul class="site-nav">
+            <li><a href="#" class="link">Blog</a></li>
+            <li><a href="#" class="link">Workshops</a></li>
+            <li><a href="#" class="link">Podcasts</a></li>
+            <li><a href="#" class="link">About</a></li>
+        </ul>
+    </section>
 </body>
 </html>
