--- a/index.html
+++ b/index.html
@@ -57,5 +57,25 @@
             impedit cumque fuga facere labore quo id necessitatibus quaerat rerum.
         </p>
     </section>
+    <section>
+        <h1 class="post-post-title">Lorem ipsum dolor sit amet</h1>
+        <p class="post-post-text">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati commodi,
+            veritatis nihil alias iste odit similique sit eius optio veniam, impedit
+            cumque fuga facere labore quo id necessitatibus quaerat rerum.Obcaecati
+            commodi, veritatis nihil alias iste odit similique sit eius optio veniam,
+            impedit cumque fuga facere labore quo id necessitatibus quaerat rerum.
+        </p>
+    </section>
+    <section>
+        <h1 class="title-title">Fusce posuere ligula elementum purus</h1>
+    </section>
+    <section>
+        <p class="pre-title">Lorem  ipsum dolor sit am et consect tur  
+            adipisicing elit. Ut voluptatem aliquid dolores sim
+            ilique    asperiores mole
+            stias, illo delectus voluptate incidunt, q
+            uas   consequatur vero ipsum voluptatibus, ad labore officia reiciendis! Quam, consequatur!</p>
+    </section>
 </body>
 </html>
